adding my projects

--- a/first/index.html
+++ b/first/index.html
@@ -1,1 +1,15 @@
 <!-- Put your HTML HERE, make sure to connect your style.css sheet -->
+<!DOCTYPE html>
+<html>
+<head>
+	<title>first</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+<header class="top">top</header>
+<div class="right">right</div>
+<div class="left">left</div>
+<div class="center">center</div>
+<div class="bottom">bottom</div>
+</body>
+</html>
