--- a/second/index.html
+++ b/second/index.html
@@ -7,9 +7,10 @@
 </head>
 <body>
 <div class="container">
-<div class="right">right<img src="http://farm9.staticflickr.com/8378/8559402848_9fcd90d20b_b.jpg" alt="image here" /></div>
-<div class="center">center</div>
 <div class="left">left</div>
+<div class="center">center</div>
+<div class="right">right</div>
+<img src="http://farm9.staticflickr.com/8378/8559402848_9fcd90d20b_b.jpg" alt="image here" />
 </div>
 </body>
 </html>
